Fix: Handle overlap (#22364)

--- a/assets/dev/scss/editor/preview/_container.scss
+++ b/assets/dev/scss/editor/preview/_container.scss
@@ -222,7 +222,7 @@
 	// TODO: Find a better solution.
 	& > &,
 	&-inner > &,
-	& > .elementor-widget & {
+	.elementor-widget & {
 
 		> .elementor-element-overlay {
 
